iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_join_wrong_array_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected sequence, found string @ example-templates/errors/join-wrong-array-type.yaml:2:25 (errno: IY5001)
  -> data type mismatch

   1 | # !$join with array that's not a sequence
   2 | test_join: !$join [",", "not_an_array"]
     |                         ^^^^^^^^ expected sequence

   expected sequence, found string

   For more info: iidy explain IY5001
