iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_maplisttohash_wrong_items_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected sequence, found string @ example-templates/errors/maplisttohash-wrong-items-type.yaml:3:10 (errno: ERR_5001)
  -> data type mismatch

   2 | test_maplisttohash: !$mapListToHash
   3 |   items: "not_a_sequence"
     |          ^^^^^^^^ expected sequence
   4 |   template: ["{{item}}", "{{item}}"]

   expected sequence, found string

   For more info: iidy explain ERR_5001
